Better error handling for TrainerChildActor

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,9 +1,23 @@
 akka {
   # event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
+//  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loggers = [akka.testkit.TestEventListener]
   loglevel = "INFO"
 
   persistence {
-    journal.leveldb.native = off
+
+    journal {
+      plugin = "akka.persistence.journal.leveldb"
+      leveldb.dir = "target/test/my/journal"
+      leveldb.compaction-intervals {
+        simple-persistent-actor = 1000
+        "*" = 5000
+      }
+    }
+
+    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+    snapshot-store.local.dir = "target/test/my/snapshots"
   }
+
 }
+
