--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,8 +1,6 @@
 akka {
-  # event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-//  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loggers = [akka.testkit.TestEventListener]
-  loglevel = "INFO"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
 
   persistence {
 
