1) every test passes 2) added tests for Qdecision policy actor and fixed errors 3) fixed wrongly matched dimension numbers 4) using inmemory-journal for test 4) alas, Akka 2.5.15 is used instead of 2.5.20 due to dependency incompatibility with the akka-persistence-inmemory module.

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,21 +1,12 @@
 akka {
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
+//  loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
 
+  loggers = ["akka.testkit.TestEventListener"]
+
   persistence {
-
-    journal {
-      plugin = "akka.persistence.journal.leveldb"
-      leveldb.dir = "target/test/my/journal"
-      leveldb.compaction-intervals {
-        simple-persistent-actor = 1000
-        "*" = 5000
-      }
-    }
-
-    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-    snapshot-store.local.dir = "target/test/my/snapshots"
+    journal.plugin = "inmemory-journal"
+    snapshot-store.plugin = "inmemory-snapshot-store"
   }
 
 }
-
