1) protobuf serializer 2) added MSFT stock price list(revised data from the Manning book Github repository) 3) removed persistent actor logic from QDecisionActor as Tensorflow Session can't be serialised and there is no API to retrieve training data directly(WIP) 3)modified the main class logic to make queries in async manner 4)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,5 +17,10 @@ akka {
     snapshot-store.local.dir = "target/my/snapshots"
   }
 
-}
+  actor {
+    serializers {
+      proto = "akka.remote.serialization.ProtobufSerializer"
+    }
 
+  }
+}
